--- a/deployment.yaml
+++ b/deployment.yaml
@@ -31,4 +31,34 @@ binary_sensor:
   - id: !extend button_3
     on_click: 
       then:
-        - light.toggle: led_strip
+        - if:
+            condition:
+              lambda: 'return id(led_strip).remote_values.get_brightness() <= 0.201f;'
+            then:
+              light.turn_off:
+                id: led_strip
+                transition_length: 0s
+            else:
+              light.dim_relative:
+                id: led_strip
+                relative_brightness: -10%
+                transition_length: 0s
+
+          
+  - id: !extend button_4
+    on_click: 
+      then:
+        - if:
+            condition:
+              light.is_on: led_strip
+            then:
+              - light.dim_relative:
+                  id: led_strip
+                  relative_brightness: 10%
+                  transition_length: 0s
+            else:
+              - light.turn_on:
+                  id: led_strip
+                  brightness: 20%
+                  transition_length: 0s
+              
