--- a/badge_base.yaml
+++ b/badge_base.yaml
@@ -16,6 +16,17 @@
 # should be in your deployment or application configuration that
 # depends on this file.
 
+# Note on RMT symbols:
+# ESP32-C3 has memory for only 192 RMT symbols, only half of which is available to transmitters.
+# We have the following defaults:
+# - esp32_rmt_led_strip: 96
+# - remote_transmitter: 48
+# - remote_receiver: 192
+# We change it to the following allocation:
+# - esp32_rmt_led_strip: 48
+# - remote_transmitter: 48
+# - remote_receiver: 86
+
 esphome:
 
 esp32:
@@ -23,6 +34,9 @@ esp32:
   variant: esp32c3
   framework:
     type: esp-idf
+
+
+# INPUT
 
 binary_sensor:
   - id: button_3
@@ -63,6 +77,17 @@ binary_sensor:
 #       number: GPIO18  # USB_D-
 #       inverted: true
 
+remote_receiver:
+  - id: ir_receiver
+    pin:
+      number: GPIO03
+      inverted: true
+      mode:
+        input: true
+        pullup: true
+    rmt_symbols: 86
+
+# OUTPUT
 
 light:
   - id: led_strip
@@ -73,12 +98,11 @@ light:
     pin: GPIO8  # Strapping Pin
     num_leds: 16
     chipset: ws2812
+    rmt_symbols: 48
 
-remote_receiver:
-  - id: ir_receiver
-    pin:
-      number: GPIO03
-      inverted: true
-      mode:
-        input: true
-        pullup: true
+remote_transmitter:
+  - id: ir_transmitter
+    pin: GPIO02
+    # Infrared remotes use a 50% carrier signal.
+    carrier_duty_percent: 50%
+    rmt_symbols: 48
