--- a/badge_base.yaml
+++ b/badge_base.yaml
@@ -35,6 +35,10 @@ esp32:
   framework:
     type: esp-idf
 
+i2c:
+  sda: GPIO21
+  scl: GPIO20
+  id: badge_i2c
 
 # INPUTS
 
@@ -90,6 +94,25 @@ remote_receiver:
         input: true
         pullup: true
     rmt_symbols: 86
+
+sensor:
+  - platform: max17043  # U4
+    id: battery_sensor
+    i2c_id: badge_i2c
+    battery_voltage:
+      name: Battery Voltage
+    battery_level:
+      name: Battery Level
+  
+  - platform: sgp30  # U7
+    id: air_sensor
+    i2c_id: badge_i2c
+    eco2:
+      name: "CO₂eq"
+      # accuracy_decimals: 1
+    tvoc:
+      name: "TVOC"
+      # accuracy_decimals: 1
 
 
 # OUTPUTS
