--- a/demo.yaml
+++ b/demo.yaml
@@ -52,7 +52,6 @@ web_server:
   version: 3
 
 # Over-the-Air provisioning.
-# Don't use it in an untrusted network, since password goes unencrypted.
 ota:
   - platform: esphome
     password: !secret ota_password
@@ -61,41 +60,34 @@ binary_sensor:
   - id: !extend button_1
     on_click: 
       then:
-        - script.execute: dim_down
+        - script.execute: next_effect
 
   - id: !extend button_2
     on_click: 
       then:
-        - script.execute: dim_up
+        - script.execute: dim_down
 
   - id: !extend button_3
     on_click: 
       then:
-        - script.execute: dim_down
+        - script.execute: dim_up
 
   - id: !extend button_4
     on_click: 
       then:
-        - script.execute: dim_up
-        # - remote_transmitter.transmit_nec:
-        #     transmitter_id: ir_transmitter
-        #     address: 0xD880
-        #     command: 0xDD22 
+        - script.execute: ir_blast
+
 
 remote_receiver:
   - id: !extend ir_receiver
     on_nec:
         then:
-        - lambda: |-
-            ESP_LOGD("IR", "Received NEC command: address=0x%X, command=0x%X", x.address, x.command);
-        - if:
-            condition: {lambda: return x.address == 0xD880 && x.command == 0xDD22;}
-            then:
-              - light.turn_on: {id: led_strip, transition_length: 0s}
-              - switch.turn_on: vibration_motor
-              - light.turn_off: {id: led_strip, transition_length: 1s}
-              - delay: 500ms
-              - switch.turn_off: vibration_motor
+          - lambda: |-
+              ESP_LOGD("IR", "Received NEC command: address=0x%X, command=0x%X", x.address, x.command);
+          - if:
+              condition: {lambda: return x.address == 0xD880 && x.command == 0xDD22;}
+              then:
+                - script.execute: run_blast_effect
 
 light:
   - id: !extend led_strip
@@ -114,6 +106,22 @@ light:
           intensity: 40%
 
 script:
+  - id: dim_down
+    mode: queued
+    then:
+      - if:
+          condition:
+            lambda: 'return id(led_strip).remote_values.get_brightness() <= 0.201f;'
+          then:
+            light.turn_off:
+              id: led_strip
+              transition_length: 0s
+          else:
+            light.dim_relative:
+              id: led_strip
+              relative_brightness: -10%
+              transition_length: 0s
+
   - id: dim_up
     mode: queued
     then:
@@ -130,18 +138,24 @@ script:
                 brightness: 20%
                 transition_length: 0s
 
-  - id: dim_down
+  - id: ir_blast
+    mode: single
+    then:
+      - remote_transmitter.transmit_nec:
+          transmitter_id: ir_transmitter
+          address: 0xD880
+          command: 0xDD22 
+
+  - id: next_effect
     mode: queued
     then:
-      - if:
-          condition:
-            lambda: 'return id(led_strip).remote_values.get_brightness() <= 0.201f;'
-          then:
-            light.turn_off:
-              id: led_strip
-              transition_length: 0s
-          else:
-            light.dim_relative:
-              id: led_strip
-              relative_brightness: -10%
-              transition_length: 0s
+      - logger.log: "TODO: Next effect"
+
+  - id: run_blast_effect
+    mode: single
+    then:
+      - light.turn_on: {id: led_strip, transition_length: 0s}
+      - switch.turn_on: vibration_motor
+      - light.turn_off: {id: led_strip, transition_length: 1s}
+      - delay: 500ms
+      - switch.turn_off: vibration_motor
