--- a/badge_basic.yaml
+++ b/badge_basic.yaml
@@ -28,15 +28,9 @@
 # - remote_receiver: 86
 
 esphome:
-  includes:
-    # Special code to make the vibration code work.
-    - vibration.h
-  on_boot: 
-    - then:
-        # Need to explicitly set up the vibration GPIO pin.
-        - lambda: badge::setup_vibration_motor();
 
 esp32:
+  # The badge is a custom board, but the esp32-c3-devkitm-1 is similar enough to work here.
   board: esp32-c3-devkitm-1
   variant: esp32c3
   framework:
@@ -124,18 +118,12 @@ remote_transmitter:
     rmt_symbols: 48
 
 switch:
-  - platform: template
-    id: vibration_motor
+  - id: vibration_motor
+    platform: gpio
+    pin:
+      # The badge uses DIO flash mode instead of QIO, making the SPI pins GPIO12 and GPIO13 free to use.
+      # See https://github.com/esphome/issues/issues/3744.
+      number: GPIO12
+      ignore_pin_validation_error: true
     name: Vibration Motor
     restore_mode: ALWAYS_OFF
-    turn_on_action:
-      - lambda: |-
-          ESP_LOGD("vibration", "turning vibration on");
-          gpio_set_level(badge::VIBRATION_GPIO, 1);
-          id(vibration_motor).publish_state(true);
-    turn_off_action:
-      - lambda: |-
-          ESP_LOGD("vibration", "turning vibration off");
-          gpio_set_level(badge::VIBRATION_GPIO, 0);
-          id(vibration_motor).publish_state(false);
-
