--- a/badge_pro.yaml
+++ b/badge_pro.yaml
@@ -18,6 +18,28 @@ packages:
   # Inherit from the basic model
   base: !include ./badge_basic.yaml
 
+spi:
+  - id: spi_bus
+    clk_pin: GPIO06  # SPI_SCK
+    mosi_pin: GPIO07  # SPI_SDO
+
+display:
+  - id: tft_display
+    platform: ili9xxx
+    model: ST7789V
+    dc_pin: GPIO00  # TFT_DC
+    cs_pin: GPIO04  # SPI_CS1
+    reset_pin: GPIO01  # SPI_CS2
+    invert_colors: true
+    # We need PSRAM to use 16 bit, so we reduce the color bit depth.
+    color_palette: 8BIT
+    dimensions:
+      width: 320
+      height: 240
+    transform:
+      swap_xy: true
+      mirror_y: true
+
 sensor:
   - platform: max17043  # U4
     id: battery_sensor
