--- a/lvgl/lvgl.yaml
+++ b/lvgl/lvgl.yaml
@@ -1,6 +1,7 @@
 # Copyright 2025 Vinicius Fortuna
 # SPDX-License-Identifier: Apache-2.0
 
+
 font:
   - file: "gfonts://Material+Symbols+Rounded"
     id: icons_50
@@ -14,7 +15,7 @@ font:
 
 lvgl:
   - id: badge_lvgl
-    log_level: VERBOSE
+    log_level: DEBUG
     displays: [badge_display]
     # Need to reduce due to lack of PSRAM, as per https://esphome.io/components/lvgl/.
     buffer_size: 25%
@@ -27,7 +28,9 @@ lvgl:
     #       right_button: key_next
 
     keypads:
-      - esc: button_1
+      - id: lvgl_keypad
+        long_press_repeat_time: 65535ms
+        # esc: button_1
         prev: button_2
         next: button_3
         enter: button_4
@@ -36,9 +39,9 @@ lvgl:
         # left: key_left
         # right: key_right
 
-    theme:
-      obj:
-        styles: [debug_border]
+    # theme:
+    #   obj:
+    #     styles: [debug_border]
 
     style_definitions:
       - id: container
@@ -69,7 +72,6 @@ lvgl:
         height: SIZE_CONTENT
 
       - id: switcher_button
-        styles: [red]
         width: SIZE_CONTENT
         height: SIZE_CONTENT
         bg_opa: 0%
@@ -104,9 +106,16 @@ lvgl:
       - !include ./page_air.yaml
       - !include ./page_qr.yaml
       - id: page_wifi
+        on_boot:
+            - lambda: |-
+                lv_group_t* group = lv_group_create();
+                ESP_LOGD("lvgl", "Initializing page_wifi: %p, group: %p", id(page_wifi).obj, group);
+                lv_obj_set_user_data(id(page_wifi).obj, group);
+                recursive_set_group(id(page_wifi).obj, lv_group_create());
         layout:
           type: FLEX
           flex_flow: COLUMN
+        pad_all: 8
         widgets:
           - switch:
               id: wifi_switch
@@ -125,31 +134,45 @@ lvgl:
                 lvgl.widget.focus:
                   id: test_slider
                   editing: false
-      - id: page_wifi_2
-        layout:
-          type: FLEX
-          flex_flow: COLUMN
-        widgets:
-          - switch:
-              id: wifi_switch2
-          - label:
-              id: wifi_state_label2
-          - textarea:
-              one_line: true
-              placeholder_text: SSID
-          - slider: {}
 
 binary_sensor:
   - id: !extend button_1
-    on_click: {script.execute: toggle_selector}
+    on_press:
+      - script.execute: show_selector
+    on_release:
+      - script.execute: dismiss_selector
 
 script:
-  - id: toggle_selector
+  - id: show_selector
     then:
-      - lvgl.widget.update:
-          id: page_selector
-          hidden: !lambda return !lv_obj_has_flag(id(page_selector), LV_OBJ_FLAG_HIDDEN);
+      - lambda: |-
+          lv_obj_clear_flag(id(page_selector), LV_OBJ_FLAG_HIDDEN);
+          lv_group_t* selector_group = (lv_group_t*) lv_obj_get_user_data(id(page_selector));
+          ESP_LOGD("lvgl", "selector group: %p", selector_group);
 
-  - id: hide_selector
+          // Focus on the current page in the selector group.
+          ESP_LOGD("lvgl", "current page: %d", id(badge_lvgl).get_current_page());
+          auto obj_to_focus = get_group_item_by_index(selector_group, id(badge_lvgl).get_current_page());
+          lv_group_focus_obj(obj_to_focus);
+
+          // Make keypad feed into the selector group.
+          lv_indev_t* indev = find_indev_by_driver(id(lvgl_keypad).get_drv());
+          ESP_LOGD("lvgl", "setting indev %p to group %p", indev, selector_group);
+          lv_indev_set_group(indev, selector_group);
+
+
+  - id: dismiss_selector
     then:
-      - lambda: lv_obj_add_flag(id(page_selector), LV_OBJ_FLAG_HIDDEN);
+      - lambda: |-
+          lv_group_t* selector_group = (lv_group_t*) lv_obj_get_user_data(id(page_selector));
+          auto page_index = get_focused_item_index_in_group(selector_group);
+          lv_obj_add_flag(id(page_selector), LV_OBJ_FLAG_HIDDEN);
+          id(badge_lvgl).show_page(page_index, LV_SCR_LOAD_ANIM_FADE_OUT, 50);
+          lv_group_t* page_group = (lv_group_t*) lv_obj_get_user_data(lv_scr_act());
+          lv_indev_t* indev = find_indev_by_driver(id(lvgl_keypad).get_drv());
+          ESP_LOGD("lvgl", "setting indev %p to group %p", indev, page_group);
+          lv_indev_set_group(indev, page_group);
+          lv_group_focus_next(page_group);
+          //   auto obj_to_focus = get_group_item_by_index(page_group, 0);
+          //   lv_group_focus_obj(obj_to_focus);
+
