--- a/lvgl/page_badge.yaml
+++ b/lvgl/page_badge.yaml
@@ -7,7 +7,7 @@ on_boot:
       lv_group_t* group = lv_group_create();
       ESP_LOGD("lvgl", "Initializing page_badge: %p, group: %p", id(page_badge).obj, group);
       lv_obj_set_user_data(id(page_badge).obj, group);
-      recursive_set_group(id(page_badge).obj, lv_group_create());
+      recursive_set_group(id(page_badge).obj, group);
 styles: [page, surface]
 layout:
   type: FLEX
